deployment.yml
# Dev Nz

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: us.gcr.io/eternal-bongo-379210/frontendnz:v1
        ports:
        - containerPort: 80
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: us.gcr.io/eternal-bongo-379210/backendnz:v3
        ports:
        - containerPort: 3000
        resources:
