ingress.yml
### Dev Nz

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-react
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    external-dns.alpha.kubernetes.io/hostname: app.nazimv.tk
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "app-issuer"
  labels:
    name: node-react
spec:
  rules:
   - host: app.nazimv.tk
     http:
      paths:
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: frontend
            port: 
              number: 8080
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: backend
            port: 
              number: 3000
  tls:
  - hosts:
    - app.nazimv.tk
    secretName: tls-secret
